Change in heading

--- a/angularjs1examples/gamalinegraph.html
+++ b/angularjs1examples/gamalinegraph.html
@@ -6,12 +6,12 @@
 		window.onload = function () {
 			var chart = new CanvasJS.Chart("chartContainer", {
 				title: {
-					text: "Site Traffic",
+					text: "Headache level",
 					fontSize: 30
 				},
 				animationEnabled: true,
 				axisX: {
-					gridColor: "Silver",
+					gridColor: "green",
 					tickColor: "silver",
 					valueFormatString: "DD/MMM"
 				},
