change of title

--- a/angularjs1examples/gamalinegraph.html
+++ b/angularjs1examples/gamalinegraph.html
@@ -6,7 +6,7 @@
 		window.onload = function () {
 			var chart = new CanvasJS.Chart("chartContainer", {
 				title: {
-					text: "Data Analysis",
+					text: "Data Analysis of the data",
 					fontSize: 30
 				},
 				animationEnabled: true,
